2010-06-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Use -graft-points instead of -pathspecs.
	Suggested by: Thomas Schmitt.

2010-06-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Add --sort-weight arguments to xorriso.
	Suggested by: Thomas Schmitt.

2010-06-12  Vladimir Serbinenko  <phcoder@gmail.com>

	custom.cfg support.

	* conf/common.rmk (grub-mkconfig_SCRIPTS): Add 41_custom.
	* util/grub.d/41_custom.in: New file.

2010-06-12  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.in (make_image): Remove sh module, which has
	been merged back into normal.

2010-06-11  Colin Watson  <cjwatson@ubuntu.com>

	* include/grub/efi/uga_draw.h (GRUB_EFI_UGA_GLT_MAX): Rename to ...
	(GRUB_EFI_UGA_BLT_MAX): ... this (typo fix).

2010-06-11  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in (install-local): Include $(srcdir)/docs/man/$$dest.h2m
	when generating manual pages.
	* docs/man/grub-bin2h.h2m: New file.
	* docs/man/grub-editenv.h2m: New file.
	* docs/man/grub-fstest.h2m: New file.
	* docs/man/grub-install.h2m: New file.
	* docs/man/grub-macho2img.h2m: New file.
	* docs/man/grub-mkconfig.h2m: New file.
	* docs/man/grub-mkdevicemap.h2m: New file.
	* docs/man/grub-mkfont.h2m: New file.
	* docs/man/grub-mkimage.h2m: New file.
	* docs/man/grub-mkpasswd-pbkdf2.h2m: New file.
	* docs/man/grub-mkrelpath.h2m: New file.
	* docs/man/grub-mkrescue.h2m: New file.
	* docs/man/grub-ofpathname.h2m: New file.
	* docs/man/grub-pe2elf.h2m: New file.
	* docs/man/grub-probe.h2m: New file.
	* docs/man/grub-reboot.h2m: New file.
	* docs/man/grub-script-check.h2m: New file.
	* docs/man/grub-set-default.h2m: New file.
	* docs/man/grub-setup.h2m: New file.

2010-06-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Use FOR_* macros instead of *_iterate whenever possible.

	* commands/handler.c: Removed.
	* commands/help.c (grub_cmd_help): Use FOR_COMMANDS.
	* commands/minicmd.c (grub_mini_cmd_lsmod): Use FOR_DL_MODULES.