@@ -1,3 +1,7 @@
+2010-06-12  Thomas Schmitt  <scdbackup@gmx.net>
+
+	* util/grub-mkrescue.in: Support --xorriso argument.
+
 2010-06-12  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* util/grub-mkrescue.in: Use -graft-points instead of -pathspecs.
